# RayTracer

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
images/: result.txt  result1.txt  result2.txt
src/: Camera.cpp  Camera.hpp  Config.hpp  Hittable.hpp  HittableList.cpp  HittableList.hpp  Interval.hpp  Material.cpp  Material.hpp  Random.hpp  Ray.cpp  Ray.hpp  RayTracer.cpp  RayTracer.hpp  Sphere.cpp  Sphere.hpp  Timer.hpp  VecUtils.hpp  main.cpp
